--- a/views/page.erb
+++ b/views/page.erb
@@ -10,7 +10,7 @@
   <section class="section">
     <div class="container">
       <h1 class="title has-text-centered">
-        Medíum
+        Figure It Out
       </h1>
       <p class="subtitle has-text-centered">
         Learning stuff <strong><em>yourself</em></strong>!
