add variable intro sentences

--- a/views/page.erb
+++ b/views/page.erb
@@ -19,14 +19,14 @@
 
       <h2 class="title"><%= title %>?</h2>
       <p class="subtitle is-text-size-2">Written by Bob on <%= Time.now.strftime("%m/%d/%Y") %></p>
-      <p>There's really only one solution to this:</p>
+      <p><%= intro %></p>
       <pre>
         <p class="has-font-weight-bold" style="font-size: 2em;">FIGURE IT OUT!</p>
       </pre>
       <br>
       <br>
       <p>Happy programming!</p>
-      <p>BOB</p>
+      <p>Bob</p>
       <hr>
 
       <article class="media">
