--- a/views/page.erb
+++ b/views/page.erb
@@ -40,7 +40,7 @@
             <p>
               <strong><%= author %></strong> <small>@figureitout</small>
               <br>
-              <%= author.split(" ").first %> is a renown expert in <%= expertise.downcase %> at <%= company_name %>. Favorite languages include <%= languages %>.<br>They live their life by the following rule: "<%= quote %>"
+              <%= author.split(" ").first %> is a renowned expert in <%= expertise.downcase %> at <%= company_name %>. Favorite languages include <%= languages %>.<br>They live their life by the following rule: "<%= quote %>"
             </p>
           </div>
         </div>
