--- a/views/page.erb
+++ b/views/page.erb
@@ -17,7 +17,7 @@
       </p>
       <hr>
 
-      <h2 class="title"><%= title %>?</h2>
+      <h2 class="title"><%= title %></h2>
       <p class="subtitle is-text-size-2">Written by <%= author %> on <%= (Date.today - rand(1..3000)).strftime("%m/%d/%Y") %></p>
       <p><%= intro %></p>
       <pre>
