--- a/views/page.erb
+++ b/views/page.erb
@@ -12,14 +12,14 @@
 
   <body>
     <div class="relative bg-gray-900">
-      <img class="w-screen h-screen object-cover opacity-25" src="https://source.unsplash.com/1600x900/?nature" alt="">
+      <img class="w-screen h-screen object-cover opacity-25" src="<%= header_photo %>" alt="">
 
       <div class="absolute inset-0 p-8 flex flex-col justify-center">
         <div class="container mx-auto text-center text-gray-400">
           <p class="text-6xl font-extrabold leading-tight text-gray-100 mb-4"><%= title %></p>
           <div class="flex items-center justify-center">
             <p class="mr-3">By</p>
-            <img class="w-5 h-5 rounded-full mr-1" src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80" alt="">
+            <img class="w-5 h-5 rounded-full mr-1" src="<%= face %>" alt="">
             <p class="text-gray-100"><%= author %></p>
           </div>
         </div>
@@ -32,7 +32,7 @@
           <h1 class="text-4xl mb-4"><%= title %></h1>
 
           <div class="flex items-center space-x-4">
-            <img class="w-16 h-16 rounded-full" src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80" alt="">
+            <img class="w-16 h-16 rounded-full" src="<%= face %>" alt="">
             <div class="leading-6">
               <p class="font-medium"><%= author %></p>
               <p class="text-gray-500"><%= date.strftime("%B %e, %Y") %></p>
@@ -47,7 +47,7 @@
             </header>
 
             <figure class="text-center mb-8">
-              <img class="w-full mb-3" src="https://source.unsplash.com/1600x900/?nature" alt="">
+              <img class="w-full mb-3" src="<%= article_photo %>" alt="">
               <figcaption class="text-sm text-gray-400"><%= caption %></figcaption>
             </figure>
 
@@ -63,7 +63,7 @@
           <footer class="mt-16 border-t pt-12">
             <p class="text-xs text-gray-500 uppercase tracking-widest">Written by</p>
             <div class="flex items-center mb-3">
-              <img class="w-6 h-6 rounded-full mr-2" src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80" alt="">
+              <img class="w-6 h-6 rounded-full mr-2" src="<%= face %>" alt="">
               <p class="text-xl"><%= author %></p>
             </div>
 
