Add a background color

--- a/views/page.erb
+++ b/views/page.erb
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="/styles.css">
   </head>
 
-  <body>
+  <body class="bg-white">
     <div class="relative bg-gray-900">
       <img class="w-screen h-screen object-cover opacity-25" src="<%= header_photo %>" alt="">
 
