--- a/public/styles.css
+++ b/public/styles.css
@@ -2111,6 +2111,12 @@ video {
   margin-left: calc(1rem * calc(1 - var(--space-x-reverse)));
 }
 
+.bg-white {
+  --bg-opacity: 1;
+  background-color: #ffffff;
+  background-color: rgba(255, 255, 255, var(--bg-opacity));
+}
+
 .bg-gray-50 {
   --bg-opacity: 1;
   background-color: #f9fafb;
