--- a/views/page.erb
+++ b/views/page.erb
@@ -16,7 +16,7 @@
 
       <div class="absolute inset-0 p-8 flex flex-col justify-center">
         <div class="container mx-auto text-center text-gray-400">
-          <p class="text-6xl font-extrabold leading-tight text-gray-100 mb-4"><%= title %></p>
+          <p class="text-3xl md:text-4xl lg:text-5xl xl:text-6xl font-extrabold leading-tight text-gray-100 mb-4"><%= title %></p>
           <div class="flex items-center justify-center">
             <p class="mr-3">By</p>
             <img class="w-5 h-5 rounded-full mr-1" src="<%= face %>" alt="">
@@ -29,7 +29,7 @@
     <div class="p-8 lg:p-16">
       <div class="container mx-auto">
         <header class="mb-8 lg:mb-16">
-          <h1 class="text-4xl mb-4"><%= title %></h1>
+          <h1 class="text-2xl md:text-3xl lg:text-4xl mb-4"><%= title %></h1>
 
           <div class="flex items-center space-x-4">
             <img class="w-16 h-16 rounded-full" src="<%= face %>" alt="">
@@ -43,7 +43,7 @@
         <div class="max-w-2xl mx-auto">
           <article class="text-xl">
             <header class="mb-8">
-              <p class="text-3xl font-light"><%= intro %></p>
+              <p class="text-2xl lg:text-3xl font-light"><%= intro %></p>
             </header>
 
             <figure class="text-center mb-8">
